# template-web-app-v01

./: .env  .eslintignore  .eslintrc.cjs  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  uno.config.ts  view.py  vite.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 2023_10_08_2014-261f1d772373_first_test.py  2023_10_11_1350-58be2e165255_first_test_01.py  2023_10_18_0808-8dea4e1f6cb8_add_user_name.py  2023_10_18_0817-721df48f7dbb_123.py
app/: config.py  database.py  main.py  view.py
app/api/: api.py  dependencies.py
app/core/: authorization.py  config.py  exception_handler.py  logging.py  middleware.py
app/crud/: base.py  user.py
app/db/: base.py  psycopg.py  sqlalchemy.py
app/middleware/: exception.py  logger.py
app/models/: user.py
app/schemas/: login.py  user.py
app/services/: exception.py  login.py  user.py
backend/: .dockerignore  Dockerfile  README.md  cli.py  entrypoint.sh  pyproject.toml  t_krb5.conf  test_gssapi.py  test_ldap.py  test_logger.py  test_schema.py  test_sqlalchemy.py
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/alembic/: env.py
backend/alembic/versions/: 2023_11_18_0827-5f08111258f8_user_table_create.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/core/: config.py  exception_handler.py  logging.py  utils.py
backend/app/crud/: user.py
backend/app/db/: query.py  sqlalchemy.py
backend/app/middleware/: __init__.py  db.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  user.py
backend/app/schemas/query/: __init__.py  filter.py  page.py
backend/app/services/: __init__.py  exception.py  login.py
frontend/: .dockerignore  .eslintignore  .eslintrc.cjs  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/src/: App.vue  main.ts
frontend/types/: env.d.ts  global.d.ts
postgresql/: Dockerfile
src/: App.vue  Default.vue  TableV1Test.vue  TableV2Test.vue  main.py  main.ts  permission.ts  view.py
src/api/: login.ts  user.ts
src/locales/: ru.ts
types/: env.d.ts  global.d.ts  router.d.ts
(+156 files in other folders)
